src/stylus/layout.styl
/*
 *    layout.styl
 *
 *
 *    Chunks are ordered alphabetically.
 *    Consists of positioning, box model & display, and other chunks:
 *
 *    .selector
 *      //positioning
 *
 *      //box model & display
 *
 *      //other
 */


/*
 *    GENERAL
 */

*
  transition: all .5s ease
body
  overflow-x: hidden
section,
header
  min-height: 100vh
  padding: 17vh 0

.btn-round
  border-radius: 50%


/*
 *    PARALLAX BACKGROUND
 */

.background
  @extends $reset-t-l
  position: fixed // instead of background-attachment
  
  size(100vh, 100vw)

  background-repeat: no-repeat
  background-position: 50%
  background-size: cover
  
  will-change: transform
  z-index: -1


/*
 *    NAVIGATION
 */

.navbar
  padding: 2vh 0

  z-index: 9999
    
.navbar-collapse,
.sticky .navbar,
.navbar-nav
  @extends $reset-m-p

.navbar-fixed-top
  border-width: 0
/*
 *    INTRO
 */

#intro
  position: relative
  
    
  & .row
    @extends $reset-m-p
    
  & [class*="col-"]
    @extends $reset-m-p
    margin-top: 5vh
    
  .hello
    display: inline-block
    padding-left: 20vw
    padding-right: 3vw
    
  & .btn
    
    &:hover
      transform: scale(1.2, 1.2)

.profile-image
  border: 3px solid
  border-radius: 50%
  margin-left: 20vw
  size(37vmin, 37vmin)

  background-repeat: no-repeat
  background-position: 30% 5%
  background-size: 45vmin
/*
 *    SKILLS
 */
  
.graph
  overflow: hidden
  

.skill
  margin-top: 2em
  & .text
    & .col-xs-4:before
      content: ""
      
      left: 0
      position: absolute
      
      height: 30vh
      border-left: 1px solid
      
      z-index: 2
      
  & .percentage
    height: 1em

    & .col-xs-4
      height: inherit
      @extends $reset-m-p
      
    & .b,
    & .i,
    & .e
      size(inherit, 0)
    //i don't need more options do i?
    & .full
      width: 100%
    & .half
      width: 50%
    & .third
      width: 33.33333333%
    & .quarter
      width: 20%


/*
 *    WORK
 */
#work
   @extends $reset-m-p
   position: relative

.skew-pages
  position: relative
  @extends $reset-t-l
  
  size(100vh, 100%)
  
  overflow: hidden
  
.skew-page
  position: absolute
  
  size(100%, 100%)
  
  transform: rotate(0.001deg)
  
  &-left,
  &-right
    position: absolute
    top: 0
    
    size(100%, 50%)

  &-left
    left: 0
  
    transform: translate(-($magic-vh), -100%)
    
    .active &
      transform: translate(0, 0)
    .inactive &
      opacity: .5
      
  &-right
    right: 0
  
    transform: translate($magic-vh, 100%)
  
    .active &
      transform: translate(0, 0)
    .inactive &
      opacity: .5
  
  &-skewed
    backface-visibility: hidden;

    position: absolute
    
    size(100%, 140%)
    transform: skewX(18deg)
    
    overflow: hidden
    
    .skew-page-left &
      left: -40%

  &_content
    position: absolute
    
    size(100%, 100%)
    padding: 17vh 30%
    transform: skewX(-18deg)
    
    .skew-page-left &
      transform-origin: 0 100%
    .skew-page-right &
      transform-origin: 100% 0
    
    &_image
      &:before
        content: ""
        position: absolute
        @extends $reset-t-l
        
        size(100%, 100%)
        
        transition: all .5s ease
      &:hover:before
        opacity: 0

.cards
  display: none

.card
  min-height: 100vh
  margin-bottom: 30px
  &.col-xs-12
    padding: 0
  
  .card-header,
  .card-image
    min-height: 60vh
  
  .card-header
    position: relative
  
  .card-title
    position: absolute
    width: 100%
    bottom: 0
    left: 0
    margin: 0
    padding: 20px
  
  .card-content
    padding-top 20px

.skew-pages_overlay
  position: absolute
  top: 0
  left: 0
  background: alpha($base, 0.6) //url(../images/texture.png)
  min-height: 100vh
  width: 100%
  
  .btn
    position: absolute
    padding: 62px 0
    width: 150px
    border-radius: 50%
    top: 50%
    left: 50%
    transform: translate(-50%, -50%)
  
  .btn,
  .skip-work
    background: transparent
    color: $lightest
    border-color: $lightest
    &:hover
      border-color: $white
      color: $white
  .btn:hover
    background: alpha($white, 0.1)
    
  .stick-top,
  .stick-bottom
    position: absolute
    padding: 20px
    left: 50%
    transform: translateX(-50%)
    
  .stick-bottom
    bottom: 0
    
  .stick-top
    top: 0

.skew-page_content_image,
.card-image
  background-size: cover

/*
 *    CONTACT
 */

.form-group
  overflow: hidden

.block
  padding: 15px 0 5px 0

.form-control
  border: none
  border-radius: 0

textarea
  resize: vertical
  min-height: 20vh


/*
 *    FOOTER
 */

footer
  padding-top: 2vh
  
  .credits,
  .social a
    display: block

  .social a
    padding: 2.5vw 0
    
    
/*
 *    MEDIA
 */

@media(min-width: 441px)
  .graph .fa-star
    display: none
    
  .graph span
    display: inline
    
@media(max-width: 440px)
  .graph .fa-star
    display: inline
    
  .graph span
    display: none

@media(max-width: 839px)
  .skew-pages
    display: none
  .cards
    display: block
@media(orientation: portrait)
  .skew-pages
    display: none
  .cards
    display: block

